--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </nav>
         </div>
     </div>
-    <div class="container-fluid d-none d-lg-block">
+    <div class="container d-none d-lg-block">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active">
@@ -253,11 +253,11 @@
                 </div>
                 <div class="contact-list-item">
                     <svg class="icon icon-phone contact-icon"><use xlink:href="#icon-phone"></use></svg>
-                    <a href="#link" class="contact-info text-decoration-none">1-800-555-5555</a>
+                    <a href="#link" class="contact-info text-decoration-none">1-888-888-8888</a>
                 </div>
                 <div class="contact-list-item">
                     <svg class="icon icon-mobile contact-icon"><use xlink:href="#icon-mobile"></use></svg>
-                    <a href="#link" class="contact-info text-decoration-none">1-800-666-6666</a>
+                    <a href="#link" class="contact-info text-decoration-none">1-888-888-8888</a>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-3 newsletter">
