--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </nav>
         </div>
     </div>
-    <div class="container d-none d-lg-block">
+    <div class="container-fluid d-none d-lg-block">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active">
