--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="media/devices.png" class="d-block object-fit-sm vw-100" alt="Devices Image">
+                <img src="media/devices.png" class="d-block object-fit-sm vw-100 img-fluid" alt="Devices Image">
             </div>
             <div class="carousel-item">
-                <img src="media/devices.png" class="d-block object-fit-sm vw-100" alt="Devices Image">
+                <img src="media/devices.png" class="d-block object-fit-sm vw-100 img-fluid" alt="Devices Image">
             </div>
             <div class="carousel-item">
-                <img src="media/devices.png" class="d-block object-fit-sm vw-100" alt="Devices Image">
+                <img src="media/devices.png" class="d-block object-fit-sm vw-100 img-fluid" alt="Devices Image">
             </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
